--- a/Homework/FirstLeson/index.html
+++ b/Homework/FirstLeson/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirstLeson</title>
     <script src="./script.js"></script>
+    <link rel="stylesheet" href="./stiale.css">
 </head>
 <body>
-    <h1>
+    <h1 class="box">
         Good day
     </h1>
     <div></div>
