--- a/Homework/FirstLeson/index.html
+++ b/Homework/FirstLeson/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirstLeson</title>
-    <script src=""></script>
+    <script src="sixLeson.js"></script>
     <link rel="stylesheet" href="./stiale.css">
 </head>
 <body>
