--- a/Homework/FirstLeson/index.html
+++ b/Homework/FirstLeson/index.html
@@ -49,6 +49,6 @@
         <span class="hatredLevelCounter"></span>
       </div>
     </div>
-    <script src="elevenLeson.js"></script>
+    <script src="tenLeson.js"></script>
 </body>
 </html>
