--- a/Homework/FirstLeson/index.html
+++ b/Homework/FirstLeson/index.html
@@ -35,7 +35,7 @@
                 <li>Пункт 5</li>
                 <li class="text">Пункт 6</li>
             </ul>
-            <button class="redBtn">Turn on</button>
+            <button class="redBtn">Turn ON</button>
             <div class="hatredLevelBlock">
                 <span class="hatredLevelCounter"></span>
             </div>
